# advent-of-code

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile
2023/: Cargo.toml
2023/src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day20.rs  day21.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2024/: Cargo.toml
2024/src/: day1.rs  day2.rs  day3.rs
aoc_2022/: Cargo.toml
aoc_2022/src/: lib.rs
src/: day16.rs  day4.rs
