[package]
name = "advent-of-code-2023"
version = "0.1.0"
authors = []
edition = "2021"

[[bin]]
name = "2023-day1"
path = "src/day1.rs"

[[bin]]
name = "2023-day2"
path = "src/day2.rs"

[[bin]]
name = "2023-day3"
path = "src/day3.rs"

[[bin]]
name = "2023-day4"
path = "src/day4.rs"

[[bin]]
name = "2023-day5"
path = "src/day5.rs"

[[bin]]
name = "2023-day6"
path = "src/day6.rs"

[[bin]]
name = "2023-day7"
path = "src/day7.rs"

[[bin]]
name = "2023-day8"
path = "src/day8.rs"

[[bin]]
name = "2023-day9"
path = "src/day9.rs"

[[bin]]
name = "2023-day10"
path = "src/day10.rs"

[dependencies]
aoc-zen-runner-macros = "0.1.0"
microbench = "0.5.0"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf", "criterion"] }
regex = "1.10.2"
coz = "0.1.3"
bstr = "1.8.0"
chumsky = "0.9.3"
gridly_grids = "0.5.0"
gridly = "0.9.0"
test-case = "3.3.1"
itertools = "0.12.0"
num = "0.4.1"
grid = "0.12.0"
pathfinding = "4.4.0"
colored = "2.1.0"

[profile.release]
debug = true

